Prevent font scaling on small screens

--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,19 @@ hsla(148, 5%, 90%, 1);
 
 #DCDCDE
 #202020
+
+#1E1717
+#F4D9B6
 */
 
 * {
   margin: 0;
   padding: 0;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
 }
 
 html {
@@ -19,9 +27,11 @@ html {
 }
 
 body {
-  line-height: 1.4;
-  padding: 0 20%;
   counter-reset: index;
+  line-height: 1.4;
+  max-width: 700px;
+  margin: auto;
+  padding: 0 1rem;
 }
 
 section {
@@ -88,6 +98,7 @@ a {
 
 .poem-content {
   white-space: nowrap;
+  overflow: visible;
 }
 
 .poem::before {
